--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.12..3.23)
+cmake_minimum_required(VERSION 3.12)
 
 project(UNIT_TEST LANGUAGES CXX C)
 set(CMAKE_CXX_STANDARD 17)
@@ -17,26 +17,17 @@ add_executable(
 add_custom_target(
     run
     DEPENDS ${CMAKE_PROJECT_NAME}
-    COMMAND ${CMAKE_COMMAND} -E echo
     COMMAND ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_PROJECT_NAME}
-    COMMAND ${CMAKE_COMMAND} -E echo
 )
 
 target_compile_options(
     ${CMAKE_PROJECT_NAME}
     PRIVATE
-        # -Wall
-        # -Wextra
-        # -pedantic
-        # -Werror
-        # -Wno-unused-parameter
-        # -Wno-deprecated-copy
+        -Wall
+        -Wextra
+        -pedantic
+        -Werror
+        -Wno-unused-parameter
+        -Wno-deprecated-copy
         -g3
-    # -fsanitize=address,undefined, muốn bật asan thì uncomment 4 dòng duới
-    # -fno-omit-frame-pointer
 )
-
-# target_link_options(
-#     ${CMAKE_PROJECT_NAME}
-#     PRIVATE -fsanitize=address,undefined -fno-omit-frame-pointer
-# )
